--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Augusta Chidiebere</h1>
             <ul>
                 <li>
-                    <a href="#home">Home</a>
+                    <a href="#home" class="#active">Home</a>
                 </li>
                 <li>
                     <a href="#about">About</a>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="icons">
-                <a href="https://www.youtube.com/@Augusberetech"><img src="img/youtube-brands-solid.svg" alt=""></a>
+                <a href=""><img src="img/youtube-brands-solid.svg" alt=""></a>
                 <p>Follow us on YouTube</p>
             </div>
         </div>
